name:           symbols-core
version:        0.1
synopsis:       Type-level symbols compatible with older versions of GHC.
license:        BSD3
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/symbols
bug-reports:    https://github.com/duairc/symbols/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Type.Symbol.Internal
    Type.Symbol.KnownSymbol

  build-depends:
    base >= 4 && < 5

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/symbols
