name:           typelits-compat
version:        0.1
synopsis:       Type-level literals compatible with older versions of GHC.
license:        BSD3
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/typelits
bug-reports:    https://github.com/duairc/typelits/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    GHC.TypeLits.Compat
    Type.List.Compat
    Type.Nat.Compat
    Type.Symbol.Compat

  build-depends:
    base >= 4 && < 5

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/typelits
