name:           types-aeson
version:        0.1
synopsis:       FromJSON and ToJSON orphan instances for dataypes defined in the types package.
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/types
bug-reports:    https://github.com/duairc/types/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Type.Meta.Aeson

  build-depends:
    aeson >= 0.4 && < 1.4,
    base >= 4.2 && < 5,
    types >= 0.1 && < 0.2,
    types-hashable >= 0.1 && < 0.2

  if impl(ghc >= 7.6)
    cpp-options: -DDataPolyKinds

  if impl(ghc >= 8)
    cpp-options: -DKindsAreTypes

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/types.git
